update: Correctly receives JSON data and is able to convert types automatically