@@ -1,6 +1,7 @@
 package org.bluett.service;
 
 import com.dtflys.forest.Forest;
+import com.dtflys.forest.http.ForestResponse;
 import lombok.extern.log4j.Log4j2;
 import org.apache.commons.lang3.exception.ExceptionUtils;
 import org.bluett.request.ImageProcessClient;
@@ -11,25 +12,20 @@ import java.awt.image.BufferedImage;
 import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.IOException;
-import java.io.Serial;
 import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 @Log4j2
 public class ImageProcessService {
     public Point getMatchLocation(String matchImagePath, BufferedImage templateImage, double threshold) {
         ImageProcessClient client = Forest.client(ImageProcessClient.class);
-        List<Point> points = client.matchPoints(new HashMap<>() {
-            @Serial
-            private static final long serialVersionUID = 36040004060497121L;
-            {
-            put("matchImage.png", imageToByteArray(matchImagePath));
-            put("templateImage.png", bufferedImageToByteArray(templateImage));
-        }}, threshold);
-        if (!points.isEmpty()) {
-            return points.getFirst();
-        }
-        return null;
+        Map<String, byte[]> byteMap = new HashMap<>();
+        byteMap.put("matchImage.png", imageToByteArray(matchImagePath));
+        byteMap.put("templateImage.png", bufferedImageToByteArray(templateImage));
+        ForestResponse<List<Integer>> response = client.matchPoints(byteMap, threshold);
+        List<Integer> result = response.getResult();
+        return new Point(result.get(0), result.get(1));
     }
 
     private byte[] imageToByteArray(String imagePath) {
